tests/compile_fail/duplicate_def_attribute.rs
use protowirers::*;

#[derive(Proto)]
struct Sample {
    #[def(field_num = 1, def_type = "int32")]
    #[def(field_num = 1, def_type = "int32")]
    s: u32,
}

fn main() {}
